# moz-sample

./: Makefile  README.md  pyproject.toml
.circleci/: config.yml
example/: example.py
src/moz_sample/sample/: module1.py
tests/moz_sample/sample/: test_module1.py
tests/moz_sample/sample/sub/: test_module2.py
