[tool.poetry]
name = "moz-sample"
version = "0.1.1"
description = "My python sample package."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/moz-sample"
repository = "https://github.com/mozkzki/moz-sample"
documentation = "https://github.com/mozkzki/moz-sample/wiki"
keywords = ['sample', 'test']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "3.9.1"
mypy = "0.900"
pytest = "6.2.0"
black = "21.7b0"
pytest-cov = "2.12.1"
coverage = "5.5"
isort = "5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
