[tool.poetry]
name = "moz-sample"
version = "0.1.1"
description = "My python sample package."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/moz-sample"
repository = "https://github.com/mozkzki/moz-sample"
documentation = "https://github.com/mozkzki/moz-sample/wiki"
keywords = ['sample', 'test']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
mypy = "0.991"
pytest = "6.2.5"
black = "21.11b1"
pytest-cov = "3.0.0"
coverage = "6.1.2"
isort = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
